coffeehouse spacing fixed

--- a/react-app/src/components/CoffeeHouse/CoffeeHouse.css
+++ b/react-app/src/components/CoffeeHouse/CoffeeHouse.css
@@ -14,6 +14,8 @@
     position: relative;
     height: auto;
     border-radius: 8px;
+    margin-left: 196px;
+    margin-right: 24px;
 }
 
 .page_title {
